# axle

./: .gitignore  CMakeLists.template.txt  CMakeLists.txt  Doxyfile  README.md  axle.sh
docs/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  axle_8h.html  basic_window_8cpp.html  basic_window_8cpp.js  class_axle_1_1_color-members.html  class_axle_1_1_color.html  class_axle_1_1_color.js  class_axle_1_1_math_1_1_vector2-members.html  class_axle_1_1_math_1_1_vector2.html  class_axle_1_1_math_1_1_vector2.js  class_axle_1_1_rectangle-members.html  class_axle_1_1_rectangle.html  class_axle_1_1_rectangle.js  class_axle_1_1_shape-members.html  class_axle_1_1_shape.html  class_axle_1_1_shape.js  class_axle_1_1_window-members.html  class_axle_1_1_window.html  class_axle_1_1_window.js  classes.html  color_8cpp.html  color_8h.html  color_8h.js  custom_8cpp.html  custom_8cpp.js  custom_example_8cpp.html  custom_example_8cpp.js  dir_19daba6fae3977e99e0655060830ad45.html  dir_19daba6fae3977e99e0655060830ad45.js  dir_3f6cc9b83d858a55628490f4f6238619.html  dir_3f6cc9b83d858a55628490f4f6238619.js  dir_69edf7c553be4ed473868ede980e4319.html  dir_69edf7c553be4ed473868ede980e4319.js  dir_885299776d2396c578407cfaa9b476b1.html  dir_885299776d2396c578407cfaa9b476b1.js  dir_edc50471c6dd5a3379bec548b2107d6c.html  doxygen_crawl.html  examples_8h.html  (+25 more)
docs/html/: annotated.html  axle_8h_source.html  class_axle_1_1_window-members.html  classes.html  (+21 more)
include/: axle.h  color.h  examples.h  hello.h  shapes.h  vector2.h  window.h
src/: color.cpp  hello.cpp  main.cpp  shapes.cpp  window.cpp
(+59 files in other folders)
